package at.fhj.msd.swdesign.proxy;

public interface ServiceInterface {

    void operation();

}
